--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello, I am a coding camp student learning how to code my own websties</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Oklahoma and went to the University of Oklahoma</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I play golf, read books, and invest in my spare time.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to be a remote working coder</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Ho Chi Minh City, Vietnam</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I like solving problems and puzzles. I also believe the compensation and remote work opportunities fit my career goals.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/anthonyvq">Github</a></li>
         </ul>
     </footer>
 </body>
